# pain_points_project

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json  settings.local.json.example
.claude/commands/: new-llm-station.md  new-source.md  plan.md  run-checks.md
.claude/hooks/: post-stop-check.sh
.claude/skills/hackernews-source/: SKILL.md
.claude/skills/llm-station/: SKILL.md
.claude/skills/reddit-source/: SKILL.md
.claude/skills/source-adapter/: SKILL.md
.claude/skills/youtube-source/: SKILL.md
docs/: architecture.md  handoff.md
docs/plans/: 2026-05-14-wave-0-query-expansion.md  2026-05-16-subreddit-discovery.md  2026-05-16-wider-query-band.md  2026-05-20-hackernews-source.md  2026-05-22-youtube-source.md
docs/specs/: 2026-05-15-subreddit-discovery-design.md  2026-05-16-wider-query-band-design.md  2026-05-20-hackernews-source-design.md  2026-05-22-youtube-source-design.md  2026-05-25-youtube-comment-quality-floor.md
migrations/: env.py
migrations/versions/: eade55a73c8f_initial_schema_jobs_tasks_raw_records_.py
plans/: README.md
scripts/: setup.sh
src/discovery/: __init__.py  hashing.py  jobs.py  view.py
src/discovery/cli/: init_db.py  inspect.py  main.py  run.py  work.py
src/discovery/config/: settings.py
src/discovery/db/: __init__.py  engine.py  models.py
src/discovery/llm/: cache.py  client.py  schemas.py
src/discovery/llm/prompts/: query_expansion.py  query_expansion_examples.py  subreddit_phrases.py
src/discovery/llm/stations/: query_expansion.py  subreddit_selection.py
src/discovery/orchestrator/: __init__.py  hackernews.py  jobs.py  reddit.py  reddit_query_validator.py  youtube.py
src/discovery/sources/: base.py  hackernews.py  keyword_tokens.py  reddit.py  reddit_ratelimit.py  reddit_subreddits.py  youtube.py
src/discovery/workers/: __init__.py  worker.py
tests/: conftest.py
tests/unit/: test_db_engine.py  test_db_models.py  test_hashing.py  test_jobs.py  test_orchestrator_hackernews.py  test_orchestrator_jobs.py  test_orchestrator_reddit.py  test_orchestrator_reddit_query_validator.py  test_orchestrator_youtube.py  test_run_cli_parallel.py  test_settings.py  test_smoke.py  test_view.py
tests/unit/llm/: test_cache.py  test_client_anthropic.py  test_client_openai.py  test_prompts_query_expansion.py  test_prompts_subreddit_phrases.py  test_schemas.py
tests/unit/llm/stations/: test_query_expansion.py  test_subreddit_selection.py
tests/unit/sources/: conftest.py  test_hackernews.py  test_keyword_tokens.py  test_reddit.py  test_reddit_ratelimit.py  test_reddit_subreddits.py  test_youtube.py
tests/unit/workers/: test_registry.py  test_worker.py
